# cpp-dinoplate-test

./: CMakeLists.txt  Makefile  README.md
.github/: rename_project.sh
cmake/: packing.cmake
src/: CMakeLists.txt
